kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - pathType: Prefix
        path: "/index.html"
        backend:
          service:
            name: nginx2-service
            port:
              number: 80
  - host: homework.otus
    http:
      paths:
      - pathType: Prefix
        path: "/homepage"
        backend:
          service:
            name: nginx2-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress2-cm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /conf/app.properties
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - pathType: Prefix
        path: "/conf/file"
        backend:
          service:
            name: nginx2-service
            port:
              number: 80
